--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -21,4 +21,7 @@ jobs:
       - name: Deploy preview
         uses: rossjrw/pr-preview-action@v1
         with:
-          source-dir: ./build/
+          source-dir: .
+          preview-branch: gh-pages
+          umbrella-dir: pr-preview
+          action: auto
