fix: preview branch

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -22,6 +22,6 @@ jobs:
         uses: rossjrw/pr-preview-action@v1
         with:
           source-dir: .
-          preview-branch: gh-pages
+          preview-branch: main
           umbrella-dir: pr-preview
           action: auto
