--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "playwright": "^1.31.0"
   },
   "dependencies": {
+    "marked": "^4.2.12",
     "typescript": "^4.9.5"
   },
   "directories": {
