fix: upgrade AI API
Signed-off-by: ivelin <ivelin.eth@gmail.com>

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,6 +7,7 @@ tasks:
       yarn install
       yarn playwright install-deps chrome
     command: |
+      nvm use --lts
       npx playwright test  --project="Mobile Chrome"
 
 ports:
