build: fix gitpod script
Signed-off-by: ivelin <ivelin.eth@gmail.com>

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,10 +5,10 @@ tasks:
       npx playwright install
       npx playwright install-deps
   - init: |
-      nvm use --lts
+      nvm install --lts
       yarn install
     command: |
-      nvm use --lts
+      nvm install --lts
       npx playwright test  --project="Mobile Chrome"
 
 ports:
